@@ -1,9 +1,8 @@
-package by.teachmeskills.repository.impl;
+package by.teachmeskills.repository.hibbernate.impl;
 
 //import by.teachmeskills.config.hibernate.HibernateJavaConfig;
 import by.teachmeskills.entity.Employee;
-import by.teachmeskills.entity.User;
-import by.teachmeskills.repository.EmployeeRepositoryInterface;
+import by.teachmeskills.repository.hibbernate.EmployeeRepositoryInterface;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.query.Query;
@@ -11,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
+
 @Repository
 
 public class EmployeeRepositoryImpl implements EmployeeRepositoryInterface {
@@ -35,8 +35,9 @@ public class EmployeeRepositoryImpl implements EmployeeRepositoryInterface {
         Session session = sessionFactory.openSession();
         Query<Employee> query = session.createQuery("select e from Employee e where salary = (SELECT max(ee.salary) from Employee ee)", Employee.class);
         List<Employee> list = query.list();
-        Employee first = list.getFirst();
+        Employee first = list.get(0);
         return first;
+//        return null;
 
     }
 
@@ -45,7 +46,8 @@ public class EmployeeRepositoryImpl implements EmployeeRepositoryInterface {
         Session session = sessionFactory.openSession();
         Query<Employee> query = session.createQuery("select e from Employee e where salary = (SELECT min(ee.salary) from Employee ee)", Employee.class);
         List<Employee> list = query.list();
-        Employee first = list.getFirst();
+        Employee first = list.get(0);
         return first;
+//        return null;
     }
 }
